--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tanks tutorial for web sockets",
   "main": "app.js",
   "scripts": {
+    "start" : "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
